--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "standard": "^17.0.0",
-    "twilio-video": "^2.21.1"
+    "twilio-video": "^2.21.1",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
