--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "dotenv": "^16.0.0",
+    "firebase": "^9.7.0",
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "standard": "^17.0.0",
     "twilio-video": "^2.21.1",
