--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "dev:server": "npx vite --host",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -15,6 +16,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "standard": "^17.0.0",
     "twilio-video": "^2.21.1",
